objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Action_Team_or_Youth_Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Team or Youth Board</label>
        <referenceTo>Action_Team_Youth_Board__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_registration_on_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked box allows registration on TCS website</description>
        <inlineHelpText>Check box to allow users to register for this event on the TCS website</inlineHelpText>
        <label>Allow registration on website?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appeals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeals</label>
        <referenceTo>Appeals__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attending__c</fullName>
        <label>Attending (by themselves)</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>*Responded - attending, Responded-attending</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attending_with_a_friend__c</fullName>
        <description>Count of those who are attending and bringing one friend</description>
        <inlineHelpText>Count of those who are attending and bringing one friend</inlineHelpText>
        <label>Attending with a friend</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Responded - attending &amp; bringing friend, Responded-attending &amp; bringing friend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_Day_community_action__c</fullName>
        <inlineHelpText>Community theme for Local Events
Skills theme for Skills Workshop</inlineHelpText>
        <label>Event action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artistic</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Practical and/or outdoor</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big_Challenge_Day_goal__c</fullName>
        <description>Description of BCD goal</description>
        <inlineHelpText>Describe the goal of the BCD</inlineHelpText>
        <label>Big Challenge Day goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Borough_or_area__c</fullName>
        <description>Borough or area the event is taking place in</description>
        <inlineHelpText>The boroughs or areas the event is taking place in</inlineHelpText>
        <label>Borough or area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>CNE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CNW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>CSE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CSW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Epsom</fullName>
                </value>
                <value>
                    <fullName>Godalming</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_A_B_or_C_Type__c</fullName>
        <label>Campaign A, B or C Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>This field is for the Portal. Please do not delete or modify</description>
        <formula>HYPERLINK(&apos;/TCS/TCSPortal_CampaignDetail?id=&apos;+Id, Name,&apos;_top&apos;)</formula>
        <inlineHelpText>For use on the TCS Mentor Portal</inlineHelpText>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenger_Action__c</fullName>
        <description>Whether Challenger RSVP is necessary</description>
        <inlineHelpText>Whether Challenger RSVP is necessary</inlineHelpText>
        <label>Challenger Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Just turn up</fullName>
                </value>
                <value>
                    <fullName>Please let us know you are coming</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t sign up yet - we will provide more information soon!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cluster the event relates to</description>
        <inlineHelpText>The cluster the event relates to</inlineHelpText>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>2012,2013,2014, 2015, 2016</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Status_Values__c</fullName>
        <label>Custom Status Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Responded-attending</fullName>
                </value>
                <value>
                    <fullName>Responded-attending &amp; bringing friend</fullName>
                </value>
                <value>
                    <fullName>Responded-maybe attending</fullName>
                </value>
                <value>
                    <fullName>Responded-not attending</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Attended-half event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_event__c</fullName>
        <description>Date of the event</description>
        <label>Date of event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_on_TCS_home_page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on TCS home page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked when event should be displayed on website</description>
        <inlineHelpText>Check box when event should be displayed on website</inlineHelpText>
        <label>Display on website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EveEventsnts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events</label>
        <referenceTo>Events__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gallery__c</fullName>
        <description>This field is for use for photo galleries on the TCS website</description>
        <inlineHelpText>Please add the link for your gallery here.</inlineHelpText>
        <label>Gallery</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Graduate_overbooking_maximum__c</fullName>
        <description>Maximum no. of grads who can be booked to attend (120%)</description>
        <formula>IF(OR(RecordTypeId = &quot;012C0000000QCl6&quot;, RecordTypeId = &quot;012C0000000QClB&quot;,RecordTypeId = &quot;012C0000000QDQ4&quot;), 3000, Maximum_no_of_Challengers__c * 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates maximum no. of grads who can be booked to attend (120%)
NB This is not relevant to some record types, so the value &quot;3000&quot; is returned if the record type is &quot;Youth Board meeting&quot; or &quot;Action Team Meeting&quot; or iContact Email Campaign&quot;.</inlineHelpText>
        <label>Graduate overbooking maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_easy_was_session_Improvements__c</fullName>
        <label>How easy was session? Improvements?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_of_event__c</fullName>
        <description>Image representing the event</description>
        <inlineHelpText>Image representing the event</inlineHelpText>
        <label>Image of event</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_preview__c</fullName>
        <formula>IF ( Image__c, IMAGE(&quot;http://challenge.brix.fatbeehive.com/data/images/campaign/&quot; &amp; Id &amp; &quot;.jpg&quot;, &quot;&quot;, 100, 100), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_event_hours__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Length of event (hours)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_address_of_event__c</fullName>
        <description>The address, excluding postcode, of the event</description>
        <inlineHelpText>The address of the event</inlineHelpText>
        <label>Location (address) of event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_postcode_of_event__c</fullName>
        <description>Postcode of the event</description>
        <inlineHelpText>The postcode of the event</inlineHelpText>
        <label>Location (postcode) of event</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_no_of_Challengers__c</fullName>
        <description>Maximum number of Graduates who can attend</description>
        <inlineHelpText>Please enter the maximum number of Graduates who can attend</inlineHelpText>
        <label>Maximum no. of Graduates</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_no_of_staff_required__c</fullName>
        <formula>Maximum_no_of_Challengers__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum no of staff required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_YPs_with_Support_Level_4_or_5__c</fullName>
        <label>No. of YPs with Support Level 4 or 5</label>
        <summaryFilterItems>
            <field>CampaignMember.Support_Level1__c</field>
            <operation>contains</operation>
            <value>4,5</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>*Responded - attending, Responded-attending, Responded - attending &amp; bringing friend, Responded-attending &amp; bringing friend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Now__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now!</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organisation event is related to</description>
        <inlineHelpText>The organisation the event is related to, if relevant</inlineHelpText>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesforceCPNid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesforceCPNid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_description__c</fullName>
        <inlineHelpText>Provide a short summary description of the event</inlineHelpText>
        <label>Summary description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TCS_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to feature this record in the TCS home page</description>
        <label>TCS Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Grad_attendance__c</fullName>
        <description>Roll-up count of grads who attending</description>
        <inlineHelpText>Calculation of total number of grads who attended (according to their status)</inlineHelpText>
        <label>Total Grad attendance</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended, Attended (recorded on website by YP)</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_number_attending__c</fullName>
        <description>Calculates those attending with a friend, plus those friends, plus those attending by themselves</description>
        <formula>(Attending_with_a_friend__c*2) + Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates those attending with a friend, plus those friends, plus those attending by themselves</inlineHelpText>
        <label>Total number attending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_staff_required__c</fullName>
        <inlineHelpText>Enter the number of staff you have decided are required</inlineHelpText>
        <label>Total staff required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Which_session__c</fullName>
        <description>This shows what type of YB session has been had</description>
        <label>Which session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting management (core)</fullName>
                </value>
                <value>
                    <fullName>Launch event evaluation (core)</fullName>
                </value>
                <value>
                    <fullName>Celebration (core)</fullName>
                </value>
                <value>
                    <fullName>Design own event 1</fullName>
                </value>
                <value>
                    <fullName>Design own event 2</fullName>
                </value>
                <value>
                    <fullName>Design own event 3</fullName>
                </value>
                <value>
                    <fullName>Design own event 4</fullName>
                </value>
                <value>
                    <fullName>Design own event 5</fullName>
                </value>
                <value>
                    <fullName>Thank you event</fullName>
                </value>
                <value>
                    <fullName>Group volunteer</fullName>
                </value>
                <value>
                    <fullName>Meet a local org</fullName>
                </value>
                <value>
                    <fullName>Learn about an issue</fullName>
                </value>
                <value>
                    <fullName>Fundraise</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Make NCS better</fullName>
                </value>
                <value>
                    <fullName>RCD Video</fullName>
                </value>
                <value>
                    <fullName>Mentor training</fullName>
                </value>
                <value>
                    <fullName>CV writing</fullName>
                </value>
                <value>
                    <fullName>Interview skills</fullName>
                </value>
                <value>
                    <fullName>Which Session</fullName>
                </value>
                <value>
                    <fullName>Refection</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YouTube_video__c</fullName>
        <description>Link to YouTube video for events</description>
        <inlineHelpText>Link to YouTube video for events</inlineHelpText>
        <label>YouTube video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Bounce_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Average click rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Click_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average click rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Average open rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Open_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average open rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Unsubscribe_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>The date/time of the last Update on the Campaign record.</description>
        <inlineHelpText>The date/time of the last Update on the Campaign record.</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Message_Statistic_Count__c</fullName>
        <description>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</description>
        <inlineHelpText>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</inlineHelpText>
        <label>Message Statistic Count</label>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Targeted Join Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <defaultValue>today() + 1</defaultValue>
        <label>Targeted Join Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Bounce_Rate__c</fullName>
        <description>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</description>
        <inlineHelpText>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</inlineHelpText>
        <label>Total Bounce Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Bounce_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Click_Rate__c</fullName>
        <description>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</description>
        <inlineHelpText>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</inlineHelpText>
        <label>Total Click Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Click_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Open_Rate__c</fullName>
        <description>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</description>
        <inlineHelpText>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</inlineHelpText>
        <label>Total Open Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Open_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Unsubscribe_Rate__c</fullName>
        <description>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</description>
        <inlineHelpText>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</inlineHelpText>
        <label>Total Unsubscribe Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Unsubscribe_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>